--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f8c383b
+	base = b673d58
 	trimbase = 
 	parent = debian/turbulent/py_trees_ros_viewer
-	previous = 
+	previous = f8c383b
