--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/py_trees_ros_viewer
-	previous = 
-	base = 3818c84
+	previous = 3818c84
+	base = f119425
 	trim = 
 	trimbase = 
