--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/py_trees_ros_viewer
-	previous = 
-	base = 3d99e9f
+	previous = 3d99e9f
+	base = 62f905b
 	trim = 
 	trimbase = 
